<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        tools:context=".MainActivity"
        android:gravity="center_horizontal">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.list.ToolBar"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            ads:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="visible"
            ads:layout_constraintBottom_toTopOf="@+id/container"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/toolbar3">

            <EditText

                android:id="@+id/startEditText"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:hint="@string/hint"

                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/endEditText"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startEditText"
                android:layout_alignStart="@+id/startEditText"
                android:layout_alignLeft="@+id/startEditText"
                android:gravity="center"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="18sp" />

            <TextView
                android:importantForAccessibility="no"
                android:id="@+id/startText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/startNum"
                android:textSize="18sp" />

            <TextView
                android:importantForAccessibility="no"
                android:id="@+id/endText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/endNum"
                android:textSize="18sp" />

        </RelativeLayout>


        <TextView
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/content_background"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:paddingRight="5dp"
            android:paddingBottom="0dp"
            android:text="@string/draw"
            android:textColor="#000000"
            android:textSize="100sp"
            ads:layout_constraintBottom_toTopOf="@+id/adView_main"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <!--광고 부분-->
        <ScrollView
            android:id="@+id/selectedMain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            ads:layout_constraintBottom_toTopOf="@+id/count_textView"
            ads:layout_constraintEnd_toEndOf="@+id/container"
            ads:layout_constraintStart_toStartOf="@+id/container">

            <TextView
                android:id="@+id/selectedList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />
        </ScrollView>

        <TextView
            android:id="@+id/count_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_round_count"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff"
            ads:layout_constraintBottom_toBottomOf="@+id/container"
            ads:layout_constraintEnd_toEndOf="@+id/container"
            ads:layout_constraintStart_toStartOf="@+id/container" />


        <com.google.android.gms.ads.AdView
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/adView_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/container" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/activity_drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>
